Parametrize the asynchronous method call..

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 
+String P_TYPE_INT = "int"
+String TYPE_STRING = "String"
+
 android {
+
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     dataBinding.enabled = true
@@ -11,6 +15,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField P_TYPE_INT , "REQUEST_TIMEOUT_SECS", "30"
+        buildConfigField TYPE_STRING , "TRANSURC_ENDPOINT_URL", "\"http://www.transurc.com.br/SiteApp/Movel/Saldo/ResultadoSaldoMovel.aspx?d=\""
     }
     buildTypes {
         release {
